<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".OTPActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/newmessage"
            android:src="@drawable/newmessage"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/newmessage"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/verificare_otp"
            android:textColor="@color/black"
            android:textSize="14sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">
            
            <EditText
                android:id="@+id/otp_id1"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>

            <EditText
                android:id="@+id/otp_id2"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:layout_marginStart="4dp"/>

            <EditText
                android:id="@+id/otp_id3"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:layout_marginStart="4dp"/>

            <EditText
                android:id="@+id/otp_id4"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:layout_marginStart="4dp"/>

            <EditText
                android:id="@+id/otp_id5"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:layout_marginStart="4dp"/>

            <EditText
                android:id="@+id/otp_id6"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                android:layout_marginStart="4dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nu_ai_primit_codul"
                android:textColor="@color/black"
                android:textSize="14sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/retrimite_codul"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textStyle="bold"/>

        </LinearLayout>

        <TextView
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="Phone number:"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/verifyOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/verifica"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/goBackToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="-30dp"
            android:text="@string/inapoi"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"/>

    </LinearLayout>

</ScrollView>